# hobot_rtsp_client

./: CHANGELOG.md  CMakeLists.txt  README.md  README_cn.md  package.xml
include/: hobot_rtsp_client.hpp  hobot_rtsp_client_node.hpp
include/rtspclient/: AudioG711Sink.h  Base64.h  H264Sink.h  H265Sink.h  SPSInfoMgr.h  buffmanager.h  rtspclient.h
launch/: hobot_rtsp_client.launch.py  hobot_rtsp_client_ai_websocket.launch.py  hobot_rtsp_client_websocket.launch.py
src/: hobot_rtsp_client.cpp  hobot_rtsp_client_exec.cpp  hobot_rtsp_client_node.cpp
src/rtspclient/: AudioG711Sink.cpp  Base64.cpp  H264Sink.cpp  H265Sink.cpp  SPSInfoMgr.cpp  rtspclient.cpp
